--- a/divs.html
+++ b/divs.html
@@ -56,6 +56,7 @@
     <button onclick="addFront()">Add Front</button>
     <button onclick="addEnd()">Add End</button>
     <button onclick="remove()">Remove</button>
+    <button onclick="promotelist()">Promote</button>
 
     <div class="flex-container" id="target">
         <div class="divlist">Item 1</div>   
@@ -72,7 +73,7 @@
                 newDiv.className = "divlist";
 
                 document.getElementById("target").appendChild(newDiv);
-                document.getElementById("inputText").value = ""; // Clear input field
+                document.getElementById("inputText").value = ""; 
             }
         }
 
@@ -85,7 +86,7 @@
 
                 let container = document.getElementById("target");
                 container.insertBefore(newDiv, container.firstChild);
-                document.getElementById("inputText").value = ""; // Clear input field
+                document.getElementById("inputText").value = ""; 
             }
         }
 
@@ -98,6 +99,20 @@
                 container.removeChild(divListItems[middleIndex]);
             } else {
                 alert("No items to remove!");
+            }
+        }
+
+        function promotelist() {
+            let container = document.getElementById("target");
+            let divListItems = document.getElementsByClassName("divlist");
+            if (divListItems.length > 1) {
+                let randomIndex = Math.floor(Math.random() * divListItems.length);
+                if (randomIndex > 0) {
+                    let selectedItem = divListItems[randomIndex];
+                    container.insertBefore(selectedItem, divListItems[randomIndex - 1]);
+                }
+            } else {
+                alert("Not enough items to promote!");
             }
         }
     </script>
